# libsvmpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
src/: CMakeLists.txt
src/libsvmpp/: Svmpp.cpp  Svmpp.h
tests/: CMakeLists.txt
tests/linearKernel/: CMakeLists.txt
tests/linearKernel/src/: linearKernel.cpp
tests/persistency/: CMakeLists.txt
tests/persistency/src/: persistency.cpp
tests/probabilities/: CMakeLists.txt
tests/probabilities/src/: probabilities.cpp
tests/rbfKernel/: CMakeLists.txt
tests/rbfKernel/src/: rbfKernel.cpp
tests/simpleTest/: CMakeLists.txt
tests/simpleTest/src/: simpleTest.cpp
tests/trainAuto/: CMakeLists.txt
tests/trainAuto/src/: trainAuto.cpp
